# spps-assistant

./: .coderabbit.yaml  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  community_mw_library.csv  pyproject.toml  sitecustomize.py  sonar-project.properties
.github/workflows/: build-windows.yml  ci.yml
desktop/: .gitignore  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
launcher/: spps_menu.sh
packaging/: build_sidecar.sh  sidecar_entry.py
spps_assistant/: __init__.py
spps_assistant/api/: __init__.py  __main__.py  app.py  responses.py
spps_assistant/application/: __init__.py  materials.py  ports.py  sequence_loader.py  synthesis_guide.py
spps_assistant/cli/: __init__.py  config_cmd.py  db_cmd.py  generate_cmd.py  main.py  materials_cmd.py  prompts.py  setup_cmd.py  template_cmd.py
spps_assistant/domain/: __init__.py  constants.py  models.py  sequence.py  solubility.py  stoichiometry.py  yield_calc.py
spps_assistant/infrastructure/: __init__.py  docx_generator.py  fasta_parser.py  materials_parser.py  pdf_generator.py  sqlite_repository.py  xlsx_generator.py  yaml_config.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_config_routes.py  test_health.py  test_residues_routes.py  test_responses.py  test_sequences_routes.py  test_sidecar_entrypoint.py  test_synthesis_routes.py
tests/application/: test_cycle_guide_view_data.py  test_materials_use_case.py  test_materials_view_data.py  test_sequence_loader.py  (+1 more)
(+66 files in other folders)
