[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spps-assistant"
version = "1.0.0"
description = "CLI tool for parallel Solid Phase Peptide Synthesis workflow management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "SPPS Assistant Contributors"}]
keywords = ["SPPS", "peptide synthesis", "chemistry", "GMP", "CLI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "click>=8.1",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
spps-assistant = "spps_assistant.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["spps_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
